<resources>
    <string name="app_name">FYP Social</string>

    <!-- Login Activity -->
    <string name="login_title">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="sign_up_prompt">Don\'t have an account? Sign Up</string>

    <!-- Register Activity -->
    <string name="register_title">Register</string>
    <string name="username_hint">Username</string>
    <string name="register_button">REGISTER</string>
    <string name="login_prompt">Already have an account? Login</string>

    <!-- Post Feed -->
    <string name="post_feed_title">Posts</string>

    <!-- Add Post -->
    <string name="add_post_title">Add Post</string>

    <!-- Comments -->
    <string name="comments_title">Comments</string>
</resources>